# Breco

./: CMakeLists.txt  CONTRIBUTING.md  ChangeRequests.md  README.md
docs/: behavioral-invariants.md  codemap.md  preview-cache-and-status.md  runtime-behavior.md  scan-and-io-behavior.md
docs/diagrams/: README.md  architecture-overview.mmd  cache-eviction-reload.mmd  preview-sync-flow.mmd  runtime-lifecycle.mmd  scan-execution-flow.mmd  signal-slot-flow.mmd  string-null-visibility.mmd  text-sequence-qualification.mmd
docs/html/: index.md  mermaid-header.html
scripts/: install_deps_ubuntu.sh
src/: main.cpp
src/app/: MainWindow.cpp  MainWindow.h
src/debug/: SelectionTrace.h
src/io/: FileEnumerator.cpp  FileEnumerator.h  OpenFilePool.cpp  OpenFilePool.h  ShiftedWindowLoader.cpp  ShiftedWindowLoader.h
src/model/: ResultModel.cpp  ResultModel.h  ResultTypes.h
src/panel/: BitmapViewPanel.cpp  BitmapViewPanel.h  CurrentByteInfoPanel.cpp  CurrentByteInfoPanel.h  ResultsTablePanel.cpp  ResultsTablePanel.h  ScanControlsPanel.cpp  ScanControlsPanel.h  TextViewPanel.cpp  TextViewPanel.h
src/scan/: MatchUtils.cpp  MatchUtils.h  ScanController.cpp  ScanController.h  ScanTypes.h  ScanWorker.cpp  ScanWorker.h  ShiftTransform.cpp  ShiftTransform.h  SpscQueue.h
src/settings/: AppSettings.cpp  AppSettings.h
src/text/: StringModeRules.cpp  StringModeRules.h  TextSequenceAnalyzer.cpp  TextSequenceAnalyzer.h
src/view/: BitmapViewWidget.cpp  BitmapViewWidget.h  TextViewWidget.cpp  TextViewWidget.h
tests/: mainwindow_integration_tests.cpp  scan_primitives_benchmark.cpp  text_analysis_benchmark.cpp  unit_tests.cpp
ui/: AboutDialog.ui  BitmapViewPanel.ui  CurrentByteInfo.ui  EditStack.ui  MainWindow.ui  ResultsTablePanel.ui  ScanControlsPanel.ui  TextViewPanel.ui  ViewControls.ui
